# emoji-trigger-dc-agent

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  example.env  pyproject.toml
agents/: agents.yaml
agents/issue-whisperer/: AGENTS.md
agents/issue-whisperer/.claude/agents/: issue-whisperer.md
agents/issue-whisperer/.claude/skills/gitlab/: SKILL.md
agents/issue-whisperer/.claude/skills/issue-summary/: SKILL.md
agents/memo-agent/: AGENTS.md
agents/memo-agent/.claude/agents/: memo-agent.md
agents/memo-agent/.claude/skills/memo-headings/: SKILL.md
claude/agents/: agents.yaml
claude/agents/memo-agent/: AGENTS.md
claude/mcp/: README.md
claude/skills/: README.md
claude/skills/memo-write/: SKILL.md
codex/agents/: agents.yaml
codex/agents/memo-agent/: AGENTS.md
codex/mcp/: README.md
codex/skills/: README.md
docs/: architecture.md  deployment.md  discord-message-fields.md  discord-setup.md  observability.md  todo.md  troubleshooting.md  volume-permissions.md
ops/alloy/: config.alloy
ops/grafana/provisioning/dashboards/: default.yaml  emoji-trigger-agent-logs.json
scripts/: test_issue_whisperer.py
src/: __init__.py  agent_manifest.py  app.py  bot.py  config.py  discord_context.py  executor.py  handlers.py  logging_config.py  trigger_queue.py
tests/: test_agent_manifest.py  test_app.py  test_config.py  test_discord_context.py  test_executor.py  test_gitlab_helper.py  test_issue_summary.py  test_logging_config.py  test_test_issue_whisperer.py  test_trigger_queue.py
(+7 files in other folders)
