[project]
name = "emoji-trigger-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.63",
    "discord-py>=2.7.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
files = ["src"]
ignore_missing_imports = true
pretty = true
show_error_codes = true
